@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.0.1" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.0.2" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 	</requires>
@@ -16,7 +16,11 @@
   > Added compat module to allow several modules imports compatibility
   > Several other related tweaks
 - Improved youtube module to allow more results from video lists and playlists
+  > Tweaks and cosmetics added as well
+- Improved directory module by having utf-8 encoding optional via exception
 - Added support for resolveurl into youtube module
-- Added login support for client.request module</news>
+- Added login support for client.request module
+- Added orderdict conditional into compat module
+- Added multiprocess support along with multithreading into workers module</news>
 	</extension>
 </addon>
