@@ -17,7 +17,7 @@
         You should have received a copy of the GNU General Public License
         along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
-
+from __future__ import absolute_import, division, unicode_literals
 
 import xbmc, xbmcaddon, xbmcplugin, xbmcgui, xbmcvfs
 import os, json, time
